// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttachedFiles component should render admin edit view 1`] = `
<WithStyles(ForwardRef(Grid))
  item={true}
  xs={12}
>
  <StandardCard
    subCard={true}
    title="Files"
  >
    <div
      style={
        Object {
          "padding": 8,
        }
      }
    >
      <WithStyles(ForwardRef(Grid))
        alignItems="center"
        container={true}
        direction="row"
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={1}
        >
           
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          sm={3}
        >
          <WithStyles(ForwardRef(Typography))
            gutterBottom={true}
            variant="caption"
          />
        </WithStyles(ForwardRef(Grid))>
        <Hidden
          xsDown={true}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            sm={3}
          >
            <WithStyles(ForwardRef(Typography))
              gutterBottom={true}
              variant="caption"
            />
          </WithStyles(ForwardRef(Grid))>
        </Hidden>
        <Hidden
          smDown={true}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            md={2}
          >
            <WithStyles(ForwardRef(Typography))
              gutterBottom={true}
              variant="caption"
            />
          </WithStyles(ForwardRef(Grid))>
        </Hidden>
        <Hidden
          xsDown={true}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            sm={true}
          />
        </Hidden>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={2}
        >
          <WithStyles(ForwardRef(Typography))
            gutterBottom={true}
            variant="caption"
          >
            Embargo date
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={true}
        />
      </WithStyles(ForwardRef(Grid))>
    </div>
    <div
      key="0"
      style={
        Object {
          "padding": 8,
        }
      }
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        key="file-0"
        spacing={3}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <WithStyles(ForwardRef(Grid))
            alignItems="center"
            container={true}
            direction="row"
            spacing={2}
            wrap="nowrap"
          >
            <WithStyles(ForwardRef(Grid))
              item={true}
              xs={1}
            >
              <FileIcon
                allowDownload={true}
                fileName="test.txt"
                mimeType="text/xml"
                pid="UQ:252236"
                previewFileName={null}
                securityAccess={true}
                showPreview={[Function]}
                thumbnailFileName={null}
                webFileName={null}
              />
            </WithStyles(ForwardRef(Grid))>
            <WithStyles(ForwardRef(Grid))
              item={true}
              sm={3}
            >
              <WithStyles(FileName)
                allowDownload={false}
                calculatedSize="3.02 KB"
                description="FezACML security for datastream - My_UQ_eSpace_researcher_guidelines_2012.pdf"
                embargoDate="3000-10-20"
                fileName="test.txt"
                iconProps={
                  Object {
                    "allowDownload": true,
                    "fileName": "test.txt",
                    "mimeType": "text/xml",
                    "pid": "UQ:252236",
                    "previewFileName": null,
                    "securityAccess": true,
                    "thumbnailFileName": null,
                    "webFileName": null,
                  }
                }
                mediaUrl="http://localhost/view/UQ:252236/test.txt"
                mimeType="text/xml"
                onFileSelect={[Function]}
                openAccessStatus={
                  Object {
                    "embargoDate": "3000-10-20",
                    "isOpenAccess": false,
                    "openAccessStatusId": 453697,
                    "securityStatus": true,
                  }
                }
                pid="UQ:252236"
                previewMediaUrl="http://localhost/view/UQ:252236/test.txt"
                securityStatus={true}
                thumbnailFileName={null}
                webMediaUrl={null}
              />
            </WithStyles(ForwardRef(Grid))>
            <Hidden
              xsDown={true}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
                sm={3}
              >
                <WithStyles(TextFieldWrapper)
                  defaultValue="FezACML security for datastream - My_UQ_eSpace_researcher_guidelines_2012.pdf"
                  fullWidth={true}
                  name="fileDescription"
                  onChange={[Function]}
                />
              </WithStyles(ForwardRef(Grid))>
            </Hidden>
            <Hidden
              smDown={true}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
                sm={2}
              >
                <WithStyles(ForwardRef(Typography))
                  noWrap={true}
                  variant="body2"
                >
                  3.02 KB
                </WithStyles(ForwardRef(Typography))>
              </WithStyles(ForwardRef(Grid))>
            </Hidden>
            <Hidden
              xsDown={true}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
                sm={true}
                style={
                  Object {
                    "textAlign": "right",
                  }
                }
              >
                <WithStyles(OpenAccessIcon)
                  embargoDate="3000-10-20"
                  isOpenAccess={false}
                  openAccessStatusId={453697}
                  securityStatus={true}
                  showEmbargoText={false}
                />
              </WithStyles(ForwardRef(Grid))>
            </Hidden>
            <WithStyles(ForwardRef(Grid))
              id="embargoDateButton-test-txt"
              item={true}
              xs={2}
            >
              <WithStyles(FileUploadEmbargoDate)
                canBeCleared={true}
                minDate={2020-03-20T03:30:36.813Z}
                onChange={[Function]}
                value="3000-10-20"
              />
            </WithStyles(ForwardRef(Grid))>
            <WithStyles(ForwardRef(Grid))
              item={true}
              style={
                Object {
                  "textAlign": "right",
                }
              }
              xs={true}
            >
              <WithStyles(ForwardRef(Tooltip))
                title="Remove this file"
              >
                <WithStyles(ForwardRef(IconButton))
                  onClick={[Function]}
                >
                  <DeleteIcon />
                </WithStyles(ForwardRef(IconButton))>
              </WithStyles(ForwardRef(Tooltip))>
            </WithStyles(ForwardRef(Grid))>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </div>
  </StandardCard>
</WithStyles(ForwardRef(Grid))>
`;

exports[`AttachedFiles component should render default view 1`] = `
<WithStyles(ForwardRef(Grid))
  item={true}
  xs={12}
>
  <StandardCard
    subCard={true}
    title="Files"
  >
    <div
      style={
        Object {
          "padding": 8,
        }
      }
    >
      <WithStyles(ForwardRef(Grid))
        alignItems="center"
        container={true}
        direction="row"
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={1}
        >
           
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          sm={3}
        >
          <WithStyles(ForwardRef(Typography))
            gutterBottom={true}
            variant="caption"
          />
        </WithStyles(ForwardRef(Grid))>
        <Hidden
          xsDown={true}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            sm={3}
          >
            <WithStyles(ForwardRef(Typography))
              gutterBottom={true}
              variant="caption"
            />
          </WithStyles(ForwardRef(Grid))>
        </Hidden>
        <Hidden
          smDown={true}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            md={2}
          >
            <WithStyles(ForwardRef(Typography))
              gutterBottom={true}
              variant="caption"
            />
          </WithStyles(ForwardRef(Grid))>
        </Hidden>
        <Hidden
          xsDown={true}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            sm={true}
          />
        </Hidden>
      </WithStyles(ForwardRef(Grid))>
    </div>
    <div
      key="0"
      style={
        Object {
          "padding": 8,
        }
      }
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        key="file-0"
        spacing={3}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <WithStyles(ForwardRef(Grid))
            alignItems="center"
            container={true}
            direction="row"
            spacing={2}
            wrap="nowrap"
          >
            <WithStyles(ForwardRef(Grid))
              item={true}
              xs={1}
            >
              <FileIcon
                allowDownload={false}
                fileName="MyUQeSpace_Researcher_Guidelines_current.pdf"
                mimeType="application/pdf"
                pid="UQ:252236"
                previewFileName={null}
                securityAccess={true}
                showPreview={[Function]}
                thumbnailFileName={null}
                webFileName={null}
              />
            </WithStyles(ForwardRef(Grid))>
            <WithStyles(ForwardRef(Grid))
              item={true}
              sm={3}
            >
              <WithStyles(FileName)
                allowDownload={false}
                calculatedSize="487.57 KB"
                description="Full text (open access)"
                embargoDate="2099-01-01"
                fileName="MyUQeSpace_Researcher_Guidelines_current.pdf"
                iconProps={
                  Object {
                    "allowDownload": false,
                    "fileName": "MyUQeSpace_Researcher_Guidelines_current.pdf",
                    "mimeType": "application/pdf",
                    "pid": "UQ:252236",
                    "previewFileName": null,
                    "securityAccess": true,
                    "thumbnailFileName": null,
                    "webFileName": null,
                  }
                }
                mediaUrl="http://localhost/view/UQ:252236/MyUQeSpace_Researcher_Guidelines_current.pdf"
                mimeType="application/pdf"
                onFileSelect={[Function]}
                openAccessStatus={
                  Object {
                    "embargoDate": "2099-01-01",
                    "isOpenAccess": false,
                    "openAccessStatusId": 453697,
                    "securityStatus": true,
                  }
                }
                pid="UQ:252236"
                previewMediaUrl="http://localhost/view/UQ:252236/MyUQeSpace_Researcher_Guidelines_current.pdf"
                securityStatus={true}
                thumbnailFileName={null}
                webMediaUrl={null}
              />
            </WithStyles(ForwardRef(Grid))>
            <Hidden
              xsDown={true}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
                sm={3}
              >
                <WithStyles(ForwardRef(Typography))
                  noWrap={true}
                  variant="body2"
                >
                  Full text (open access)
                </WithStyles(ForwardRef(Typography))>
              </WithStyles(ForwardRef(Grid))>
            </Hidden>
            <Hidden
              smDown={true}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
                sm={2}
              >
                <WithStyles(ForwardRef(Typography))
                  noWrap={true}
                  variant="body2"
                >
                  487.57 KB
                </WithStyles(ForwardRef(Typography))>
              </WithStyles(ForwardRef(Grid))>
            </Hidden>
            <Hidden
              xsDown={true}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
                sm={true}
                style={
                  Object {
                    "textAlign": "right",
                  }
                }
              >
                <WithStyles(OpenAccessIcon)
                  embargoDate="2099-01-01"
                  isOpenAccess={false}
                  openAccessStatusId={453697}
                  securityStatus={true}
                  showEmbargoText={false}
                />
              </WithStyles(ForwardRef(Grid))>
            </Hidden>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </div>
    <div
      key="1"
      style={
        Object {
          "padding": 8,
        }
      }
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        key="file-1"
        spacing={3}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <WithStyles(ForwardRef(Grid))
            alignItems="center"
            container={true}
            direction="row"
            spacing={2}
            wrap="nowrap"
          >
            <WithStyles(ForwardRef(Grid))
              item={true}
              xs={1}
            >
              <FileIcon
                allowDownload={true}
                fileName="My_UQ_eSpace_researcher_guidelines_2012.pdf"
                mimeType="application/pdf"
                pid="UQ:252236"
                previewFileName={null}
                securityAccess={true}
                showPreview={[Function]}
                thumbnailFileName={null}
                webFileName={null}
              />
            </WithStyles(ForwardRef(Grid))>
            <WithStyles(ForwardRef(Grid))
              item={true}
              sm={3}
            >
              <WithStyles(FileName)
                allowDownload={true}
                calculatedSize="1.05 MB"
                description="My UQ eSpace - Researcher Guide"
                embargoDate={null}
                fileName="My_UQ_eSpace_researcher_guidelines_2012.pdf"
                iconProps={
                  Object {
                    "allowDownload": true,
                    "fileName": "My_UQ_eSpace_researcher_guidelines_2012.pdf",
                    "mimeType": "application/pdf",
                    "pid": "UQ:252236",
                    "previewFileName": null,
                    "securityAccess": true,
                    "thumbnailFileName": null,
                    "webFileName": null,
                  }
                }
                mediaUrl="http://localhost/view/UQ:252236/My_UQ_eSpace_researcher_guidelines_2012.pdf"
                mimeType="application/pdf"
                onFileSelect={[Function]}
                openAccessStatus={
                  Object {
                    "embargoDate": null,
                    "isOpenAccess": true,
                    "openAccessStatusId": 453697,
                  }
                }
                pid="UQ:252236"
                previewMediaUrl="http://localhost/view/UQ:252236/My_UQ_eSpace_researcher_guidelines_2012.pdf"
                securityStatus={true}
                thumbnailFileName={null}
                webMediaUrl={null}
              />
            </WithStyles(ForwardRef(Grid))>
            <Hidden
              xsDown={true}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
                sm={3}
              >
                <WithStyles(ForwardRef(Typography))
                  noWrap={true}
                  variant="body2"
                >
                  My UQ eSpace - Researcher Guide
                </WithStyles(ForwardRef(Typography))>
              </WithStyles(ForwardRef(Grid))>
            </Hidden>
            <Hidden
              smDown={true}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
                sm={2}
              >
                <WithStyles(ForwardRef(Typography))
                  noWrap={true}
                  variant="body2"
                >
                  1.05 MB
                </WithStyles(ForwardRef(Typography))>
              </WithStyles(ForwardRef(Grid))>
            </Hidden>
            <Hidden
              xsDown={true}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
                sm={true}
                style={
                  Object {
                    "textAlign": "right",
                  }
                }
              >
                <WithStyles(OpenAccessIcon)
                  embargoDate={null}
                  isOpenAccess={true}
                  openAccessStatusId={453697}
                  securityStatus={true}
                  showEmbargoText={false}
                />
              </WithStyles(ForwardRef(Grid))>
            </Hidden>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </div>
    <div
      key="2"
      style={
        Object {
          "padding": 8,
        }
      }
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        key="file-2"
        spacing={3}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <WithStyles(ForwardRef(Grid))
            alignItems="center"
            container={true}
            direction="row"
            spacing={2}
            wrap="nowrap"
          >
            <WithStyles(ForwardRef(Grid))
              item={true}
              xs={1}
            >
              <FileIcon
                allowDownload={true}
                fileName="My_UQ_eSpace_researcher_guidelines_2014.pdf"
                mimeType="application/pdf"
                pid="UQ:252236"
                previewFileName={null}
                securityAccess={true}
                showPreview={[Function]}
                thumbnailFileName={null}
                webFileName={null}
              />
            </WithStyles(ForwardRef(Grid))>
            <WithStyles(ForwardRef(Grid))
              item={true}
              sm={3}
            >
              <WithStyles(FileName)
                allowDownload={true}
                calculatedSize="267.44 KB"
                description="My UQ eSpace - Researcher Guide"
                embargoDate={null}
                fileName="My_UQ_eSpace_researcher_guidelines_2014.pdf"
                iconProps={
                  Object {
                    "allowDownload": true,
                    "fileName": "My_UQ_eSpace_researcher_guidelines_2014.pdf",
                    "mimeType": "application/pdf",
                    "pid": "UQ:252236",
                    "previewFileName": null,
                    "securityAccess": true,
                    "thumbnailFileName": null,
                    "webFileName": null,
                  }
                }
                mediaUrl="http://localhost/view/UQ:252236/My_UQ_eSpace_researcher_guidelines_2014.pdf"
                mimeType="application/pdf"
                onFileSelect={[Function]}
                openAccessStatus={
                  Object {
                    "embargoDate": null,
                    "isOpenAccess": true,
                    "openAccessStatusId": 453697,
                  }
                }
                pid="UQ:252236"
                previewMediaUrl="http://localhost/view/UQ:252236/My_UQ_eSpace_researcher_guidelines_2014.pdf"
                securityStatus={true}
                thumbnailFileName={null}
                webMediaUrl={null}
              />
            </WithStyles(ForwardRef(Grid))>
            <Hidden
              xsDown={true}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
                sm={3}
              >
                <WithStyles(ForwardRef(Typography))
                  noWrap={true}
                  variant="body2"
                >
                  My UQ eSpace - Researcher Guide
                </WithStyles(ForwardRef(Typography))>
              </WithStyles(ForwardRef(Grid))>
            </Hidden>
            <Hidden
              smDown={true}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
                sm={2}
              >
                <WithStyles(ForwardRef(Typography))
                  noWrap={true}
                  variant="body2"
                >
                  267.44 KB
                </WithStyles(ForwardRef(Typography))>
              </WithStyles(ForwardRef(Grid))>
            </Hidden>
            <Hidden
              xsDown={true}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
                sm={true}
                style={
                  Object {
                    "textAlign": "right",
                  }
                }
              >
                <WithStyles(OpenAccessIcon)
                  embargoDate={null}
                  isOpenAccess={true}
                  openAccessStatusId={453697}
                  securityStatus={true}
                  showEmbargoText={false}
                />
              </WithStyles(ForwardRef(Grid))>
            </Hidden>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </div>
    <div
      key="3"
      style={
        Object {
          "padding": 8,
        }
      }
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        key="file-3"
        spacing={3}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <WithStyles(ForwardRef(Grid))
            alignItems="center"
            container={true}
            direction="row"
            spacing={2}
            wrap="nowrap"
          >
            <WithStyles(ForwardRef(Grid))
              item={true}
              xs={1}
            >
              <FileIcon
                allowDownload={true}
                fileName="My_UQ_eSpace_UPO_guidelines.pdf"
                mimeType="application/pdf"
                pid="UQ:252236"
                previewFileName={null}
                securityAccess={true}
                showPreview={[Function]}
                thumbnailFileName={null}
                webFileName={null}
              />
            </WithStyles(ForwardRef(Grid))>
            <WithStyles(ForwardRef(Grid))
              item={true}
              sm={3}
            >
              <WithStyles(FileName)
                allowDownload={true}
                calculatedSize="1.03 MB"
                description="Full text (open access)"
                embargoDate={null}
                fileName="My_UQ_eSpace_UPO_guidelines.pdf"
                iconProps={
                  Object {
                    "allowDownload": true,
                    "fileName": "My_UQ_eSpace_UPO_guidelines.pdf",
                    "mimeType": "application/pdf",
                    "pid": "UQ:252236",
                    "previewFileName": null,
                    "securityAccess": true,
                    "thumbnailFileName": null,
                    "webFileName": null,
                  }
                }
                mediaUrl="http://localhost/view/UQ:252236/My_UQ_eSpace_UPO_guidelines.pdf"
                mimeType="application/pdf"
                onFileSelect={[Function]}
                openAccessStatus={
                  Object {
                    "embargoDate": null,
                    "isOpenAccess": true,
                    "openAccessStatusId": 453697,
                  }
                }
                pid="UQ:252236"
                previewMediaUrl="http://localhost/view/UQ:252236/My_UQ_eSpace_UPO_guidelines.pdf"
                securityStatus={true}
                thumbnailFileName={null}
                webMediaUrl={null}
              />
            </WithStyles(ForwardRef(Grid))>
            <Hidden
              xsDown={true}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
                sm={3}
              >
                <WithStyles(ForwardRef(Typography))
                  noWrap={true}
                  variant="body2"
                >
                  Full text (open access)
                </WithStyles(ForwardRef(Typography))>
              </WithStyles(ForwardRef(Grid))>
            </Hidden>
            <Hidden
              smDown={true}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
                sm={2}
              >
                <WithStyles(ForwardRef(Typography))
                  noWrap={true}
                  variant="body2"
                >
                  1.03 MB
                </WithStyles(ForwardRef(Typography))>
              </WithStyles(ForwardRef(Grid))>
            </Hidden>
            <Hidden
              xsDown={true}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
                sm={true}
                style={
                  Object {
                    "textAlign": "right",
                  }
                }
              >
                <WithStyles(OpenAccessIcon)
                  embargoDate={null}
                  isOpenAccess={true}
                  openAccessStatusId={453697}
                  securityStatus={true}
                  showEmbargoText={false}
                />
              </WithStyles(ForwardRef(Grid))>
            </Hidden>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </div>
    <div
      key="4"
      style={
        Object {
          "padding": 8,
        }
      }
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        key="file-4"
        spacing={3}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <WithStyles(ForwardRef(Grid))
            alignItems="center"
            container={true}
            direction="row"
            spacing={2}
            wrap="nowrap"
          >
            <WithStyles(ForwardRef(Grid))
              item={true}
              xs={1}
            >
              <FileIcon
                allowDownload={true}
                fileName="My_UQ_eSpace_UPO_guidelines_2013.pdf"
                mimeType="application/pdf"
                pid="UQ:252236"
                previewFileName={null}
                securityAccess={true}
                showPreview={[Function]}
                thumbnailFileName={null}
                webFileName={null}
              />
            </WithStyles(ForwardRef(Grid))>
            <WithStyles(ForwardRef(Grid))
              item={true}
              sm={3}
            >
              <WithStyles(FileName)
                allowDownload={true}
                calculatedSize="1.27 MB"
                description="UPO Guide v.3"
                embargoDate={null}
                fileName="My_UQ_eSpace_UPO_guidelines_2013.pdf"
                iconProps={
                  Object {
                    "allowDownload": true,
                    "fileName": "My_UQ_eSpace_UPO_guidelines_2013.pdf",
                    "mimeType": "application/pdf",
                    "pid": "UQ:252236",
                    "previewFileName": null,
                    "securityAccess": true,
                    "thumbnailFileName": null,
                    "webFileName": null,
                  }
                }
                mediaUrl="http://localhost/view/UQ:252236/My_UQ_eSpace_UPO_guidelines_2013.pdf"
                mimeType="application/pdf"
                onFileSelect={[Function]}
                openAccessStatus={
                  Object {
                    "embargoDate": null,
                    "isOpenAccess": true,
                    "openAccessStatusId": 453697,
                  }
                }
                pid="UQ:252236"
                previewMediaUrl="http://localhost/view/UQ:252236/My_UQ_eSpace_UPO_guidelines_2013.pdf"
                securityStatus={true}
                thumbnailFileName={null}
                webMediaUrl={null}
              />
            </WithStyles(ForwardRef(Grid))>
            <Hidden
              xsDown={true}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
                sm={3}
              >
                <WithStyles(ForwardRef(Typography))
                  noWrap={true}
                  variant="body2"
                >
                  UPO Guide v.3
                </WithStyles(ForwardRef(Typography))>
              </WithStyles(ForwardRef(Grid))>
            </Hidden>
            <Hidden
              smDown={true}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
                sm={2}
              >
                <WithStyles(ForwardRef(Typography))
                  noWrap={true}
                  variant="body2"
                >
                  1.27 MB
                </WithStyles(ForwardRef(Typography))>
              </WithStyles(ForwardRef(Grid))>
            </Hidden>
            <Hidden
              xsDown={true}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
                sm={true}
                style={
                  Object {
                    "textAlign": "right",
                  }
                }
              >
                <WithStyles(OpenAccessIcon)
                  embargoDate={null}
                  isOpenAccess={true}
                  openAccessStatusId={453697}
                  securityStatus={true}
                  showEmbargoText={false}
                />
              </WithStyles(ForwardRef(Grid))>
            </Hidden>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </div>
    <div
      key="5"
      style={
        Object {
          "padding": 8,
        }
      }
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        key="file-5"
        spacing={3}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <WithStyles(ForwardRef(Grid))
            alignItems="center"
            container={true}
            direction="row"
            spacing={2}
            wrap="nowrap"
          >
            <WithStyles(ForwardRef(Grid))
              item={true}
              xs={1}
            >
              <FileIcon
                allowDownload={true}
                fileName="My_UQ_eSpace_UPO_guidelines_2016.pdf"
                mimeType="application/pdf"
                pid="UQ:252236"
                previewFileName={null}
                securityAccess={true}
                showPreview={[Function]}
                thumbnailFileName={null}
                webFileName={null}
              />
            </WithStyles(ForwardRef(Grid))>
            <WithStyles(ForwardRef(Grid))
              item={true}
              sm={3}
            >
              <WithStyles(FileName)
                allowDownload={true}
                calculatedSize="573.25 KB"
                description="UPO Guide v.4"
                embargoDate={null}
                fileName="My_UQ_eSpace_UPO_guidelines_2016.pdf"
                iconProps={
                  Object {
                    "allowDownload": true,
                    "fileName": "My_UQ_eSpace_UPO_guidelines_2016.pdf",
                    "mimeType": "application/pdf",
                    "pid": "UQ:252236",
                    "previewFileName": null,
                    "securityAccess": true,
                    "thumbnailFileName": null,
                    "webFileName": null,
                  }
                }
                mediaUrl="http://localhost/view/UQ:252236/My_UQ_eSpace_UPO_guidelines_2016.pdf"
                mimeType="application/pdf"
                onFileSelect={[Function]}
                openAccessStatus={
                  Object {
                    "embargoDate": null,
                    "isOpenAccess": true,
                    "openAccessStatusId": 453697,
                  }
                }
                pid="UQ:252236"
                previewMediaUrl="http://localhost/view/UQ:252236/My_UQ_eSpace_UPO_guidelines_2016.pdf"
                securityStatus={true}
                thumbnailFileName={null}
                webMediaUrl={null}
              />
            </WithStyles(ForwardRef(Grid))>
            <Hidden
              xsDown={true}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
                sm={3}
              >
                <WithStyles(ForwardRef(Typography))
                  noWrap={true}
                  variant="body2"
                >
                  UPO Guide v.4
                </WithStyles(ForwardRef(Typography))>
              </WithStyles(ForwardRef(Grid))>
            </Hidden>
            <Hidden
              smDown={true}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
                sm={2}
              >
                <WithStyles(ForwardRef(Typography))
                  noWrap={true}
                  variant="body2"
                >
                  573.25 KB
                </WithStyles(ForwardRef(Typography))>
              </WithStyles(ForwardRef(Grid))>
            </Hidden>
            <Hidden
              xsDown={true}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
                sm={true}
                style={
                  Object {
                    "textAlign": "right",
                  }
                }
              >
                <WithStyles(OpenAccessIcon)
                  embargoDate={null}
                  isOpenAccess={true}
                  openAccessStatusId={453697}
                  securityStatus={true}
                  showEmbargoText={false}
                />
              </WithStyles(ForwardRef(Grid))>
            </Hidden>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </div>
    <div
      key="6"
      style={
        Object {
          "padding": 8,
        }
      }
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        key="file-6"
        spacing={3}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <WithStyles(ForwardRef(Grid))
            alignItems="center"
            container={true}
            direction="row"
            spacing={2}
            wrap="nowrap"
          >
            <WithStyles(ForwardRef(Grid))
              item={true}
              xs={1}
            >
              <FileIcon
                allowDownload={true}
                fileName="UQ_eSpace_My_Research_091119.pdf"
                mimeType="application/pdf"
                pid="UQ:252236"
                previewFileName={null}
                securityAccess={true}
                showPreview={[Function]}
                thumbnailFileName={null}
                webFileName={null}
              />
            </WithStyles(ForwardRef(Grid))>
            <WithStyles(ForwardRef(Grid))
              item={true}
              sm={3}
            >
              <WithStyles(FileName)
                allowDownload={true}
                calculatedSize="902.51 KB"
                description="UPO Guide - v.1"
                embargoDate={null}
                fileName="UQ_eSpace_My_Research_091119.pdf"
                iconProps={
                  Object {
                    "allowDownload": true,
                    "fileName": "UQ_eSpace_My_Research_091119.pdf",
                    "mimeType": "application/pdf",
                    "pid": "UQ:252236",
                    "previewFileName": null,
                    "securityAccess": true,
                    "thumbnailFileName": null,
                    "webFileName": null,
                  }
                }
                mediaUrl="http://localhost/view/UQ:252236/UQ_eSpace_My_Research_091119.pdf"
                mimeType="application/pdf"
                onFileSelect={[Function]}
                openAccessStatus={
                  Object {
                    "embargoDate": null,
                    "isOpenAccess": true,
                    "openAccessStatusId": 453697,
                  }
                }
                pid="UQ:252236"
                previewMediaUrl="http://localhost/view/UQ:252236/UQ_eSpace_My_Research_091119.pdf"
                securityStatus={true}
                thumbnailFileName={null}
                webMediaUrl={null}
              />
            </WithStyles(ForwardRef(Grid))>
            <Hidden
              xsDown={true}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
                sm={3}
              >
                <WithStyles(ForwardRef(Typography))
                  noWrap={true}
                  variant="body2"
                >
                  UPO Guide - v.1
                </WithStyles(ForwardRef(Typography))>
              </WithStyles(ForwardRef(Grid))>
            </Hidden>
            <Hidden
              smDown={true}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
                sm={2}
              >
                <WithStyles(ForwardRef(Typography))
                  noWrap={true}
                  variant="body2"
                >
                  902.51 KB
                </WithStyles(ForwardRef(Typography))>
              </WithStyles(ForwardRef(Grid))>
            </Hidden>
            <Hidden
              xsDown={true}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
                sm={true}
                style={
                  Object {
                    "textAlign": "right",
                  }
                }
              >
                <WithStyles(OpenAccessIcon)
                  embargoDate={null}
                  isOpenAccess={true}
                  openAccessStatusId={453697}
                  securityStatus={true}
                  showEmbargoText={false}
                />
              </WithStyles(ForwardRef(Grid))>
            </Hidden>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </div>
    <div
      key="7"
      style={
        Object {
          "padding": 8,
        }
      }
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        key="file-7"
        spacing={3}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <WithStyles(ForwardRef(Grid))
            alignItems="center"
            container={true}
            direction="row"
            spacing={2}
            wrap="nowrap"
          >
            <WithStyles(ForwardRef(Grid))
              item={true}
              xs={1}
            >
              <FileIcon
                allowDownload={true}
                fileName="UQ_eSpace_My_Research_091119_old.pdf"
                mimeType="application/pdf"
                pid="UQ:252236"
                previewFileName={null}
                securityAccess={true}
                showPreview={[Function]}
                thumbnailFileName={null}
                webFileName={null}
              />
            </WithStyles(ForwardRef(Grid))>
            <WithStyles(ForwardRef(Grid))
              item={true}
              sm={3}
            >
              <WithStyles(FileName)
                allowDownload={true}
                calculatedSize="84.36 KB"
                description="Full text"
                embargoDate="2000-01-01"
                fileName="UQ_eSpace_My_Research_091119_old.pdf"
                iconProps={
                  Object {
                    "allowDownload": true,
                    "fileName": "UQ_eSpace_My_Research_091119_old.pdf",
                    "mimeType": "application/pdf",
                    "pid": "UQ:252236",
                    "previewFileName": null,
                    "securityAccess": true,
                    "thumbnailFileName": null,
                    "webFileName": null,
                  }
                }
                mediaUrl="http://localhost/view/UQ:252236/UQ_eSpace_My_Research_091119_old.pdf"
                mimeType="application/pdf"
                onFileSelect={[Function]}
                openAccessStatus={
                  Object {
                    "embargoDate": null,
                    "isOpenAccess": true,
                    "openAccessStatusId": 453697,
                  }
                }
                pid="UQ:252236"
                previewMediaUrl="http://localhost/view/UQ:252236/UQ_eSpace_My_Research_091119_old.pdf"
                securityStatus={true}
                thumbnailFileName={null}
                webMediaUrl={null}
              />
            </WithStyles(ForwardRef(Grid))>
            <Hidden
              xsDown={true}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
                sm={3}
              >
                <WithStyles(ForwardRef(Typography))
                  noWrap={true}
                  variant="body2"
                >
                  Full text
                </WithStyles(ForwardRef(Typography))>
              </WithStyles(ForwardRef(Grid))>
            </Hidden>
            <Hidden
              smDown={true}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
                sm={2}
              >
                <WithStyles(ForwardRef(Typography))
                  noWrap={true}
                  variant="body2"
                >
                  84.36 KB
                </WithStyles(ForwardRef(Typography))>
              </WithStyles(ForwardRef(Grid))>
            </Hidden>
            <Hidden
              xsDown={true}
            >
              <WithStyles(ForwardRef(Grid))
                item={true}
                sm={true}
                style={
                  Object {
                    "textAlign": "right",
                  }
                }
              >
                <WithStyles(OpenAccessIcon)
                  embargoDate={null}
                  isOpenAccess={true}
                  openAccessStatusId={453697}
                  securityStatus={true}
                  showEmbargoText={false}
                />
              </WithStyles(ForwardRef(Grid))>
            </Hidden>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </div>
  </StandardCard>
</WithStyles(ForwardRef(Grid))>
`;

exports[`AttachedFiles component should show alerts 1`] = `null`;

exports[`AttachedFiles component should toggle preview 1`] = `
<MediaPreview
  fileName="test3"
  mediaUrl="test1"
  mimeType="test2"
  onClose={[Function]}
  previewMediaUrl="test4"
/>
`;
